ingress/4009515151/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: demo-app
spec:
  tls:
  - hosts:   
    - demo-app.4009515151.com
    secretName: 4009515151.com-tls
  rules:
    # eg  www.vankeservice.com
  - host: demo-app.4009515151.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: demo-app
            port:
              name: http
        pathType: ImplementationSpecific
